docs/deploy/k8s/docs-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docs
  namespace: production
  annotations:
    scheduler.alpha.kubernetes.io/affinity: >
      {
        "nodeAffinity": {
          "preferredDuringSchedulingIgnoredDuringExecution": {
            "nodeSelectorTerms": [
              {
                "matchExpressions": [
                  {
                    "key": "cloud.google.com/gke-nodepool",
                    "operator": "In",
                    "values": ["services"]
                  }
                ]
              }
            ]
          }
        }
      }
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docs
        tier: services
    spec:
      containers:
      - name: docs
        image: gcr.io/exponentjs/docs:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
          name: http
