docs/deploy/k8s/docs.ingress.template.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${APP_NAME}-ingress
  namespace: ${KUBE_NAMESPACE}
  labels:
    ssl: 'true'
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - ${INGRESS_HOSTNAME}
    secretName: ${APP_NAME}-ssl
  rules:
  - host: ${INGRESS_HOSTNAME}
    http:
      paths:
      - backend:
          serviceName: ${APP_NAME}
          servicePort: 80
        path: /
